--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,13 @@ default: &default
   username: postgres
   password: <%= ENV['DB_PASSWORD'] %>
   pool: 5
-  host: db 
+  host: localhost
+  port: 5432
 
 development:
   <<: *default
-  database: AppleProj
+  database: AppleProjTest
+
+development:
+  <<: *default
+  database: AppleProjDevelopment
