Workable create and docker container

--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,11 @@ default: &default
   host: localhost
   port: 5432
 
-development:
+production:
+  <<: *default
+  database: AppleProjProduction
+
+test:
   <<: *default
   database: AppleProjTest
 
