--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,21 @@
-version: '3.7'
-
-# To access data postgres writes within container from host machine
-volumes:
-  postgres_data: {}
-
+version: '3'
 services:
   db:
-    image: postgres:10-alpine
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: $DB_PASSWORD
+    image: postgres
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - ./tmp/db:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-
-  redis:
-    image: redis:alpine
-    ports:
-      - "6379:6379"
-
-  app:
-    build:
-      context: .
-      dockerfile: ./docker/app/DockerFile
-      args:
-        RAILS_ENV: $RAILS_ENV
-    depends_on:
-      - db
-      - redis
-    # env_file: .docker/.env
-    ports:
-      - "3000:3000"
-
   web:
     build:
       context: .
-      dockerfile: ./docker/web/DockerFile
+      dockerfile: ./docker/app/Dockerfile
       args:
         RAILS_ENV: $RAILS_ENV
-
-    depends_on:
-      - app
-
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    volumes:
+      - .:/myapp
     ports:
-      - 80:80
+      - "3000:3000"
+    depends_on:
+      - db
