--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ default: &default
   username: postgres
   password: <%= ENV['DB_PASSWORD'] %>
   pool: 5
-  host: localhost
+  host: db
   port: 5432
 
 production:
